--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    //implementation 'com.github.bumptech.glide:glide:4.13.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation("io.coil-kt:coil:2.1.0")
     implementation("io.coil-kt:coil-svg:2.1.0")
