--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,7 @@ dependencies {
     implementation("io.coil-kt:coil:2.1.0")
     implementation("io.coil-kt:coil-svg:2.1.0")
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
